--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@clerk/nextjs": "^6.9.6",
     "@prisma/client": "6.2.0",
     "canvas-confetti": "^1.9.3",
+    "html2canvas-pro": "^1.5.8",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "react": "^19.0.0",
